spring-boot/src/main/java/com/hotels/example/errors/StartDateAfterEndDateException.java
package com.hotels.example.errors;

public class StartDateAfterEndDateException extends  Exception {
    public StartDateAfterEndDateException(String message){
        super(message);
    }


}
